--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -1,16 +1,17 @@
 @font-face {
     font-family: 'lifehack';
     src:local(Lifehack), 
-    url('fonts/lifehack/lifehack_medium-webfont.woff2') format('woff2');
+    url('../fonts/lifehack/lifehack_medium-webfont.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'gagalin';
     src:local(gagalin), 
-    url('fonts/Gagalin/gagalin-regular-webfont.woff2') format('woff2');
+    url('../fonts/Gagalin/gagalin-regular-webfont.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
+  
 }
 // @font-face {
 //     font-family: 'Lifehack';
