--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -5,9 +5,17 @@
     font-family: 'Ubuntu', sans-serif;
   
 }
+body{
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+body,html{
+    height: 100%;
+}
 .section{
     height: 100vh;
     min-height: 650px;
+    background-size:cover;
 }
 .container{
     // width:1100px;
