--- a/scss/welcome.scss
+++ b/scss/welcome.scss
@@ -1,5 +1,5 @@
 .welcome{
-    background:url('welcome-background.png') center center no-repeat;
+    background:url('../backgrounds/welcome-background.png') center center no-repeat;
     background-size: cover;
     width:100%;
     height: 100vh;
@@ -32,13 +32,14 @@
          font-size:65px;
          line-height: 1;
          text-transform: lowercase; 
+       
         // background: #000;
  }
 
 .scroll-down-arrow{
-    background:url('icons/arrow-scroll.svg') center center no-repeat;
-    width:50px;
-    height: 50px;
+   // background:url('icons/arrow-scroll.svg') center center no-repeat;
+    // width:50px;
+    // height: 50px;
     // margin: 0 auto;
     display: block;
     position: absolute;
