изменения по комментариям2

--- a/scss/btn.scss
+++ b/scss/btn.scss
@@ -3,6 +3,7 @@
     // width: 120px;
     display: block;
     padding: 10px 15px;
+    border:none;
     // height: 44px;
     text-align: center;
     // line-height: 44px;
