--- a/styles/style.scss
+++ b/styles/style.scss
@@ -11,6 +11,10 @@
 @import "../scss/section-title.scss";
 @import "../scss/menu.scss";
 @import "../scss/team.scss";
+@import "../scss/map.scss";
+@import "../scss/footer.scss";
+@import "../scss/delivery.scss";
+
 
 
 
