--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -3,7 +3,6 @@
     margin: 0;
     padding:0;
     font-family: 'Ubuntu', sans-serif;
-  
 }
 body{
     -webkit-font-smoothing: antialiased;
@@ -27,6 +26,18 @@ body,html{
     flex-direction: column;
     height: 100%;
 }
+.container--map{
+    display: flex;
+    justify-content: space-between;
+    flex-direction:row;
+}
+.container--delivery{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+   // align-items:center;
+}
+
 .wrapper{
    position: relative;
    width: 100%;
@@ -45,4 +56,7 @@ ul{
 footer{
     position: relative;
     width: 100%;
+}
+img{
+    max-width: 100%;
 }
