--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,16 @@ body, html {
   flex-direction: column;
   height: 100%; }
 
+.container--map {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row; }
+
+.container--delivery {
+  display: flex;
+  justify-content: center;
+  flex-direction: column; }
+
 .wrapper {
   position: relative;
   width: 100%;
@@ -51,8 +61,11 @@ footer {
   position: relative;
   width: 100%; }
 
+img {
+  max-width: 100%; }
+
 .welcome {
-  background: url("../backgrounds/welcome-background.png") center center no-repeat;
+  background: url("../image/backgrounds/welcome-background.png") center center no-repeat;
   background-size: cover;
   width: 100%;
   height: 100vh;
@@ -61,7 +74,9 @@ footer {
   position: relative; }
 
 .welcome__content {
-  display: flex; }
+  flex: .7;
+  display: flex;
+  align-items: center; }
 
 .welcome__content-image {
   padding: 0 15px; }
@@ -144,7 +159,7 @@ footer {
   width: 110px; }
 
 .we-best {
-  background: url("../backgrounds/best-background.png") center center/cover no-repeat; }
+  background: url("../image/backgrounds/best-background.png") center center/cover no-repeat; }
 
 .we-best__list {
   display: flex;
@@ -205,7 +220,7 @@ footer {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); }
-  .change__link:hover:before {
+  .change__link-active:before {
     content: '';
     width: 17px;
     height: 17px;
@@ -264,6 +279,7 @@ footer {
   border-radius: 5px;
   display: block;
   padding: 10px 15px;
+  border: none;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
@@ -280,7 +296,7 @@ footer {
 
 .menu {
   display: flex;
-  background: url("../backgrounds/menu-background.png") center center no-repeat;
+  background: url("../image/backgrounds/menu-background.png") center center no-repeat;
   background-size: cover;
   position: relative;
   justify-content: flex-end; }
@@ -295,32 +311,29 @@ footer {
   list-style: none;
   display: flex; }
 
-.assortment:nth-child(1) .assortment__item {
-  background: url("../image/menu-list-1.png");
-  background-size: cover;
-  width: 80px;
-  height: 100%; }
-
-.assortment:nth-child(2) .assortment__item {
-  background: url("../image/menu-list-2.png");
-  background-size: cover;
-  width: 80px;
-  height: 100%; }
-
-.assortment:nth-child(3) .assortment__item {
-  background: url("../image/menu-list-3.png");
-  background-size: cover;
-  width: 80px;
-  height: 100%; }
-
 .assortment {
-  display: flex;
-  align-items: center;
-  cursor: pointer; }
+  display: flex; }
 
-.assortment:hover .assortment__submenu {
-  animation: submenu_width 2s;
-  animation-fill-mode: forwards; }
+.assortment__item {
+  display: flex;
+  justify-content: flex-end;
+  width: 80px;
+  height: 100%;
+  background-size: cover;
+  cursor: pointer; }
+  .assortment__item span {
+    font-family: 'gagalin';
+    font-size: 40px;
+    white-space: nowrap;
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    width: inherit;
+    color: white;
+    height: inherit;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end; }
 
 @keyframes submenu_width {
   0% {
@@ -337,10 +350,16 @@ footer {
     font-size: 14px;
     font-weight: 300;
     font-family: 'Ubuntu' ,serif;
-    padding: 0 30px; }
+    padding: 0 33px;
+    padding-top: 60px;
+    line-height: 24px; }
+
+.assortment__submenu--active {
+  width: 540px; }
 
 .team {
-  background-image: url("../backgrounds/team-background.png"); }
+  background-image: url("../image/backgrounds/team-background.png");
+  position: relative; }
 
 .team__content {
   position: absolute;
@@ -348,7 +367,10 @@ footer {
   width: 50vw;
   height: 100%;
   background-color: rgba(47, 50, 52, 0.93);
-  padding-left: 95px; }
+  padding-left: 95px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
 
 .team__title {
   color: #f9b43b;
@@ -367,14 +389,21 @@ footer {
   cursor: pointer;
   padding-bottom: 15px; }
   .personal__name:before {
-    content: '';
+    position: absolute;
+    left: -15px;
+    top: 0px;
+    content: '\25b2';
+    display: block;
     width: 7px;
     height: 7px;
-    background: white;
-    border-radius: 50%;
-    position: absolute;
-    left: -10px;
-    top: 5px; }
+    margin-right: 0px;
+    -webkit-transform: scale(0.7);
+    transform: scale(0.7); }
+  .personal__name--active {
+    color: #f9b43b; }
+    .personal__name--active:before {
+      content: '\25bc';
+      top: 2px; }
 
 .personal__submenu {
   height: 0;
@@ -386,15 +415,17 @@ footer {
   font-family: 'Ubuntu', sans-serif; }
   .personal__submenu .personal__position {
     font-weight: 700;
-    padding-bottom: 25px; }
+    padding-bottom: 10px;
+    font-size: 14px; }
   .personal__submenu .personal__desc {
-    font-weight: 300; }
+    font-weight: 300;
+    font-size: 14px; }
 
 @keyframes submenu_height {
   100% {
     height: 100px; } }
-.personal__name:hover + .personal__submenu {
-  height: 100px;
+.personal__submenu--active {
+  height: 110px;
   transition: 1s; }
 
 .personal__avatar {
@@ -408,5 +439,161 @@ footer {
 .personal__text {
   width: 208px;
   line-height: 24px; }
+
+.map {
+  background-image: url("../image/backgrounds/map-background.png");
+  position: relative; }
+
+.footer {
+  width: 100%;
+  background: #000;
+  position: absolute;
+  bottom: 0%;
+  color: white;
+  padding: 11px 0px;
+  display: flex;
+  justify-content: space-between; }
+
+.contacts {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 14px; }
+
+.contacts__address {
+  font-weight: 300;
+  margin-bottom: 10px; }
+
+.contacts__tel {
+  font-weight: 700;
+  text-decoration: none;
+  color: #e45028; }
+
+.social__list {
+  display: flex;
+  align-items: center; }
+
+.social__item {
+  margin-right: 20px; }
+  .social__item:last-child {
+    margin-right: 0; }
+
+.delivery {
+  background-image: url("../image/backgrounds/order-background.png"); }
+
+.delivery__title {
+  color: #f9b43b;
+  margin-bottom: 44px; }
+
+.delivery__form {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  font-weight: 300; }
+
+.delivery__data {
+  display: flex;
+  flex-direction: column; }
+
+.delivery__input {
+  border: none;
+  height: 35px;
+  border-radius: 5px;
+  border: 1px solid #d1cfcb; }
+  .delivery__input--222px {
+    width: 222px; }
+  .delivery__input--460px {
+    width: 460px; }
+  .delivery__input--100px {
+    width: 100px; }
+  .delivery__input:active, .delivery__input:hover {
+    border: 2px solid #f9b43b;
+    transition: 0.4s; }
+
+.delivery__data_label {
+  display: flex;
+  flex-direction: column; }
+
+.delivery__data_container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px; }
+  .delivery__data_container:last-child {
+    margin-bottom: 0; }
+
+.delivery__text {
+  width: 460px;
+  height: 110px;
+  border: 1px solid #d1cfcb;
+  border-radius: 5px; }
+
+.delivery__data_elem {
+  margin-bottom: 29px; }
+  .delivery__data_elem label {
+    padding-left: 25px; }
+
+.delivery__data_button {
+  display: flex;
+  flex-direction: row; }
+
+.delivery__order {
+  background: #e45028; }
+
+.delivery__reset {
+  background: transparent;
+  border: none;
+  text-transform: capitalize; }
+
+.delivery__text {
+  margin-bottom: 20px;
+  resize: none; }
+
+.delivery__field {
+  margin-bottom: 9px; }
+
+.delivery__visually-hidden {
+  display: none; }
+
+.delivery__change {
+  margin-right: 20px; }
+
+.delivery__radio-label {
+  position: relative; }
+  .delivery__radio-label:before {
+    content: '';
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: white;
+    position: absolute;
+    left: 0%; }
+
+.delivery__radio:checked + .delivery__radio-label:after {
+  content: '';
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background-color: #e35028;
+  position: absolute;
+  left: 3%;
+  top: 26%; }
+
+.delivery__checkbox-label {
+  position: relative; }
+  .delivery__checkbox-label:before {
+    content: '';
+    width: 15px;
+    height: 15px;
+    background: white;
+    position: absolute;
+    left: 0%; }
+
+.delivery__checkbox:checked + .delivery__checkbox-label:after {
+  content: '';
+  width: 12px;
+  height: 10px;
+  background: url("../icons/checked.png") no-repeat;
+  position: absolute;
+  top: 20%;
+  left: 1%; }
 
 /*# sourceMappingURL=style.css.map */
