перевел значения px  в rem

--- a/scss/btn.scss
+++ b/scss/btn.scss
@@ -1,15 +1,15 @@
 .btn{
-    border-radius: 5px;
+    border-radius: 0.3125rem;
     // width: 120px;
     display: block;
-    padding: 10px 15px;
+    padding: 0.625rem 0.9375rem;
     border:none;
     // height: 44px;
     text-align: center;
     // line-height: 44px;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: 13px;
+    font-size: 0.8125rem;
     font-weight:500;
     color:white
 }
