--- a/scss/section-title.scss
+++ b/scss/section-title.scss
@@ -1,6 +1,6 @@
 .section-title{
     font-family: 'gagalin',sans-serif;
-    font-size:72px;
+    font-size:4.5rem;
     text-transform: uppercase; 
     &--centered{
         text-align: center;
