--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -4,18 +4,18 @@
     position: absolute;
     bottom: 0%;
     color:white; 
-    padding:11px 0px;  
+    padding:0.6875rem 0rem;  
     display: flex;
     justify-content: space-between; 
    
 }
 .contacts{
     font-family: 'Ubuntu', sans-serif;
-    font-size: 14px;
+    font-size: 0.875rem;
 }
 .contacts__address{
     font-weight: 300;
-    margin-bottom: 10px;
+    margin-bottom: 0.625rem;
 }
 .contacts__tel{
     font-weight: 700;
@@ -27,7 +27,7 @@
     align-items: center;
 }
 .social__item{
-    margin-right: 20px;
+    margin-right: 1.25rem;
     &:last-child{
         margin-right: 0;
     }
