--- a/scss/header.scss
+++ b/scss/header.scss
@@ -3,7 +3,7 @@
     color:white;
     justify-content: space-between;
     align-items:center;
-    padding-top:6px;
+    padding-top:0.375rem;
    
 }
 .header__buttons{
@@ -13,7 +13,7 @@
 }
 .header__order-btn{
     background-color:$orange_button;
-    margin-left: 15px;
+    margin-left: 0.9375rem;
 }
 .nav__list{
     display: flex;
@@ -21,7 +21,7 @@
     list-style: none;
 }
 .nav__item{
-    margin-right: 16px;
+    margin-right: 1rem;
     display: flex;
     align-items: center;
     &:last-child{
@@ -32,24 +32,24 @@
     }
     &:after{
         content:'';
-        width: 4px;
-        height: 4px;
+        width: 0.25rem;
+        height: 0.25rem;
         background: #fff;
         border-radius: 50%;
-        margin-left: 15px;
+        margin-left: 0.9375rem;
 
     }
 }
 .nav__link{
-    font-size: 13px;
+    font-size: 0.8125rem;
     color:white;
     text-transform: uppercase;
     text-decoration: none;
 }
 // .logo{
 //     background:url('icons/logo.svg') center center no-repeat ;
-//     width:100px;
-//     height:80px;
+//     width:6.25rem;
+//     height:5rem;
 //     //transform: scale(1.1);
 // }
 // .btn{
@@ -61,16 +61,16 @@
     //     display: flex;
     //     justify-content: around;
     //     background: green;
-    //     /* width: 884px; */
-    //     margin-left: 59px;
+    //     /* width: 55.25rem; */
+    //     margin-left: 3.6875rem;
     //     justify-content: space-around;
     //     .navigation__item{
     //         color: #ffffff;
     //         font-family: 'Ubuntu';
-    //         font-size: 18px;
+    //         font-size: 1.125rem;
     //         font-weight: 500;
     //         text-transform: uppercase;
-    //         margin-right: 45px;
+    //         margin-right: 2.8125rem;
     //         &:last-child{
     //             margin-right: 0;
     //         }
