--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -4,6 +4,9 @@
     padding:0;
     font-family: 'Ubuntu', sans-serif;
 }
+html{
+    font-size: 16px;
+}
 body{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
