--- a/scss/reviews.scss
+++ b/scss/reviews.scss
@@ -29,8 +29,8 @@
     background-color:rgba(0,0,0,0.5);
     display: flex;
     flex-direction: column;
-    padding-left:30px;
-    padding-right:50px;
+    padding-left:1.875rem;
+    padding-right:3.125rem;
      opacity: 0;
     width: 100%;
     height: 100%;
@@ -44,18 +44,18 @@
 .reviews__text{
     font-family:'Ubuntu',sans-serif;
     font-weight: lighter;
-    font-size: 14px;
-    line-height: 24px;
-    padding-bottom: 30px;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    padding-bottom: 1.875rem;
 }
 .reviews__name{
     font-family:'Gagalin',sans-serif;
     text-transform: uppercase;
-    font-size: 14px;
-    padding-bottom: 30px;
+    font-size: 0.875rem;
+    padding-bottom: 1.875rem;
 }
 .reviews__more-link{
 //   @extend %button;
   background-color: #2f3234;
-  width: 110px;
+  width: 6.875rem;
 }
