--- a/scss/sprite.scss
+++ b/scss/sprite.scss
@@ -1,38 +1,38 @@
 .phone-icon{
-    width: 11px;
-    height: 11px;
+    width: 0.6875rem;
+    height: 0.6875rem;
     fill:$orange_button
 }
 .scroll-down{
-    width: 30px;
-    height: 30px;
+    width: 1.875rem;
+    height: 1.875rem;
     fill:white;
 }
 .logo{
-    width: 98px;
-    height: 74px;
+    width: 6.125rem;
+    height: 4.625rem;
 }
 .sprite{
     display: block;
 }
 .meat{
-    width: 97px;
-    height: 90px;
+    width: 6.0625rem;
+    height: 5.625rem;
     fill: #E35028
 }
 .hand{
-    width: 97px;
-    height: 90px;
+    width: 6.0625rem;
+    height: 5.625rem;
     fill: #F9B43B;
 }
 .natural{
-    width: 97px;
-    height: 90px;
+    width: 6.0625rem;
+    height: 5.625rem;
     fill:#8BC03F;
 }
 .social_icon{
-    width:20px;
-    height: 20px;
+    width:1.25rem;
+    height: 1.25rem;
     fill: #585858;
     transition: 1s;
     &:hover{
@@ -41,8 +41,8 @@
     }
 }
 .drops{
-    width: 430px;
-    height: 400px;
+    width: 26.875rem;
+    height: 25rem;
     position: absolute;
     top:0;
 }
