--- a/scss/welcome.scss
+++ b/scss/welcome.scss
@@ -13,23 +13,23 @@
    align-items: center; 
 }
 .welcome__content-image{
-    padding: 0 15px;
+    padding: 0 0.9375rem;
     position: relative;
  }
  .welcome__content-text{
      display: flex;
      flex-direction: column;
      justify-content: center;
-     padding-top:20px;
+     padding-top:1.25rem;
  }
  .welcome__content-caption{
      color:$orange_head;
-     // margin-bottom: 45px;
+     // margin-bottom: 2.8125rem;
      line-height: 2;
  }
  .welcome__content-desc{
      font-family: 'lifehack',sans-serif;
-         font-size:65px;
+         font-size:4.0625rem;
          line-height: 1;
          text-transform: lowercase; 
        
@@ -42,8 +42,8 @@
  }
 .scroll-down-arrow{
    // background:url('icons/arrow-scroll.svg') center center no-repeat;
-    // width:50px;
-    // height: 50px;
+    // width:3.125rem;
+    // height: 3.125rem;
     // margin: 0 auto;
     display: block;
     position: absolute;
@@ -60,13 +60,13 @@
 //         background:black;
 //         &:before{
 //             content: "";
-//             width: 600px;
-//             height: 500px;
+//             width: 37.5rem;
+//             height: 31.25rem;
 //             background-image: url("file:///Users/tweecezor/Documents/GitHub/Loft-Burger/icons/drops.svg");
 //            background-repeat: no-repeat;
 //             position: absolute;
-//             top: 247px;
-//             left: 102px;
+//             top: 15.4375rem;
+//             left: 6.375rem;
 //             z-index: -1;
 //             transform: scale(1.45);
 //         }
@@ -78,8 +78,8 @@
 //         justify-content: center;
 //         .welcome-content__desc{
 //             font-family: 'lifehack',sans-serif;
-//             font-size:75px;
-//             line-height: 60px;
+//             font-size:4.6875rem;
+//             line-height: 3.75rem;
 //             text-transform: lowercase; 
 //             background: #000;
 //         }
