--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,9 @@
   padding: 0;
   font-family: 'Ubuntu', sans-serif; }
 
+html {
+  font-size: 16px; }
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
@@ -79,14 +82,14 @@ img {
   align-items: center; }
 
 .welcome__content-image {
-  padding: 0 15px;
+  padding: 0 0.9375rem;
   position: relative; }
 
 .welcome__content-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 20px; }
+  padding-top: 1.25rem; }
 
 .welcome__content-caption {
   color: #f9b43b;
@@ -94,7 +97,7 @@ img {
 
 .welcome__content-desc {
   font-family: 'lifehack',sans-serif;
-  font-size: 65px;
+  font-size: 4.0625rem;
   line-height: 1;
   text-transform: lowercase; }
 
@@ -137,8 +140,8 @@ img {
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   flex-direction: column;
-  padding-left: 30px;
-  padding-right: 50px;
+  padding-left: 1.875rem;
+  padding-right: 3.125rem;
   opacity: 0;
   width: 100%;
   height: 100%;
@@ -150,19 +153,19 @@ img {
 .reviews__text {
   font-family: 'Ubuntu',sans-serif;
   font-weight: lighter;
-  font-size: 14px;
-  line-height: 24px;
-  padding-bottom: 30px; }
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  padding-bottom: 1.875rem; }
 
 .reviews__name {
   font-family: 'Gagalin',sans-serif;
   text-transform: uppercase;
-  font-size: 14px;
-  padding-bottom: 30px; }
+  font-size: 0.875rem;
+  padding-bottom: 1.875rem; }
 
 .reviews__more-link {
   background-color: #2f3234;
-  width: 110px; }
+  width: 6.875rem; }
 
 .we-best {
   background: url("../image/backgrounds/best-background.png") center center/cover no-repeat; }
@@ -173,7 +176,7 @@ img {
 
 .we-best__item {
   flex: 1;
-  margin-right: 10px; }
+  margin-right: 0.625rem; }
   .we-best__item:last-child {
     margin-right: 0; }
 
@@ -181,7 +184,7 @@ img {
   justify-content: center; }
 
 .advantages__img {
-  margin-bottom: 40px;
+  margin-bottom: 2.5rem;
   display: flex;
   justify-content: center; }
 
@@ -189,37 +192,37 @@ img {
   text-align: center; }
   .advantages__desc h2 {
     font-family: 'lifehack', sans-serif;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 500;
-    margin-bottom: 10px; }
+    margin-bottom: 0.625rem; }
   .advantages__desc p {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 300;
-    font-size: 14px;
+    font-size: 0.875rem;
     line-height: 1.5; }
 
 .we-best__title {
   color: black;
-  margin-bottom: 100px; }
+  margin-bottom: 6.25rem; }
 
 .change__list {
   position: fixed;
   z-index: 1000;
-  top: 123px;
-  right: 58px;
+  top: 7.6875rem;
+  right: 3.625rem;
   list-style: none;
   display: flex;
   flex-direction: column; }
 
 .change__item {
-  margin-bottom: 21px; }
+  margin-bottom: 1.3125rem; }
 
 .change__link {
   position: relative; }
   .change__link:after {
     content: '';
-    width: 6px;
-    height: 6px;
+    width: 0.375rem;
+    height: 0.375rem;
     background: white;
     border-radius: 50%;
     position: absolute;
@@ -228,9 +231,9 @@ img {
     transform: translate(-50%, -50%); }
   .change__link-active:before {
     content: '';
-    width: 17px;
-    height: 17px;
-    border: 2px solid white;
+    width: 1.0625rem;
+    height: 1.0625rem;
+    border: 0.125rem solid white;
     border-radius: 50%;
     position: absolute;
     top: 50%;
@@ -243,7 +246,7 @@ img {
   color: white;
   justify-content: space-between;
   align-items: center;
-  padding-top: 6px; }
+  padding-top: 0.375rem; }
 
 .header__buttons {
   display: flex;
@@ -252,7 +255,7 @@ img {
 
 .header__order-btn {
   background-color: #e45028;
-  margin-left: 15px; }
+  margin-left: 0.9375rem; }
 
 .nav__list {
   display: flex;
@@ -260,7 +263,7 @@ img {
   list-style: none; }
 
 .nav__item {
-  margin-right: 16px;
+  margin-right: 1rem;
   display: flex;
   align-items: center; }
   .nav__item:last-child {
@@ -269,33 +272,33 @@ img {
       display: none; }
   .nav__item:after {
     content: '';
-    width: 4px;
-    height: 4px;
+    width: 0.25rem;
+    height: 0.25rem;
     background: #fff;
     border-radius: 50%;
-    margin-left: 15px; }
+    margin-left: 0.9375rem; }
 
 .nav__link {
-  font-size: 13px;
+  font-size: 0.8125rem;
   color: white;
   text-transform: uppercase;
   text-decoration: none; }
 
 .btn {
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   display: block;
-  padding: 10px 15px;
+  padding: 0.625rem 0.9375rem;
   border: none;
   text-align: center;
   text-transform: uppercase;
   text-decoration: none;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 500;
   color: white; }
 
 .section-title {
   font-family: 'gagalin',sans-serif;
-  font-size: 72px;
+  font-size: 4.5rem;
   text-transform: uppercase; }
   .section-title--centered {
     text-align: center; }
@@ -323,13 +326,13 @@ img {
 .assortment__item {
   display: flex;
   justify-content: flex-end;
-  width: 80px;
+  width: 5rem;
   height: 100%;
   background-size: cover;
   cursor: pointer; }
   .assortment__item span {
     font-family: 'gagalin';
-    font-size: 40px;
+    font-size: 2.5rem;
     white-space: nowrap;
     transform: rotate(-90deg);
     -webkit-transform: rotate(-90deg);
@@ -345,23 +348,23 @@ img {
   0% {
     width: 0; }
   100% {
-    width: 540px; } }
+    width: 33.75rem; } }
 .assortment__submenu {
-  width: 0px;
+  width: 0rem;
   overflow: hidden;
   background-color: rgba(47, 50, 52, 0.93);
   color: white;
   height: 100%; }
   .assortment__submenu-text {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 300;
     font-family: 'Ubuntu' ,serif;
-    padding: 0 33px;
-    padding-top: 60px;
-    line-height: 24px; }
+    padding: 0 2.0625rem;
+    padding-top: 3.75rem;
+    line-height: 1.5rem; }
 
 .assortment__submenu--active {
-  width: 540px; }
+  width: 33.75rem; }
 
 .team {
   background-image: url("../image/backgrounds/team-background.png");
@@ -373,78 +376,78 @@ img {
   width: 50vw;
   height: 100%;
   background-color: rgba(47, 50, 52, 0.93);
-  padding-left: 95px;
+  padding-left: 5.9375rem;
   display: flex;
   flex-direction: column;
   justify-content: center; }
 
 .team__title {
   color: #f9b43b;
-  margin-bottom: 55px; }
+  margin-bottom: 3.4375rem; }
 
 .team__item {
-  margin-bottom: 35px; }
+  margin-bottom: 2.1875rem; }
   .team__item:last-child {
     margin-bottom: 0; }
 
 .personal__name {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-family: 'gagalin', sans-serif;
   color: white;
   position: relative;
   cursor: pointer;
-  padding-bottom: 15px; }
+  padding-bottom: 0.9375rem; }
   .personal__name:before {
     position: absolute;
-    left: -15px;
-    top: 0px;
+    left: -0.9375rem;
+    top: 0rem;
     content: '\25b2';
     display: block;
-    width: 7px;
-    height: 7px;
-    margin-right: 0px;
+    width: 0.4375rem;
+    height: 0.4375rem;
+    margin-right: 0rem;
     -webkit-transform: scale(0.7);
     transform: scale(0.7); }
   .personal__name--active {
     color: #f9b43b; }
     .personal__name--active:before {
       content: '\25bc';
-      top: 2px; }
+      top: 0.125rem; }
 
 .personal__submenu {
   height: 0;
   display: flex;
   flex-direction: row;
   overflow: hidden;
-  font-size: 14px;
+  font-size: 0.875rem;
   color: white;
   font-family: 'Ubuntu', sans-serif; }
   .personal__submenu .personal__position {
     font-weight: 700;
-    padding-bottom: 10px;
-    font-size: 14px; }
+    padding-bottom: 0.625rem;
+    font-size: 0.875rem; }
   .personal__submenu .personal__desc {
     font-weight: 300;
-    font-size: 14px; }
+    font-size: 0.875rem; }
 
 @keyframes submenu_height {
   100% {
-    height: 100px; } }
+    height: 6.25rem; } }
 .personal__submenu--active {
-  height: 110px;
+  height: 6.875rem;
   transition: 1s; }
 
 .personal__avatar {
-  margin-right: 20px; }
+  margin-right: 1.25rem; }
 
 .personal__img {
   border-radius: 50%;
-  width: 100px;
-  height: 100px; }
+  width: 6.25rem;
+  height: 6.25rem; }
 
 .personal__text {
-  width: 208px;
-  line-height: 24px; }
+  width: 13rem;
+  line-height: 1.5rem; }
 
 .map {
   background-image: url("../image/backgrounds/map-background.png");
@@ -456,17 +459,17 @@ img {
   position: absolute;
   bottom: 0%;
   color: white;
-  padding: 11px 0px;
+  padding: 0.6875rem 0rem;
   display: flex;
   justify-content: space-between; }
 
 .contacts {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 14px; }
+  font-size: 0.875rem; }
 
 .contacts__address {
   font-weight: 300;
-  margin-bottom: 10px; }
+  margin-bottom: 0.625rem; }
 
 .contacts__tel {
   font-weight: 700;
@@ -478,7 +481,7 @@ img {
   align-items: center; }
 
 .social__item {
-  margin-right: 20px; }
+  margin-right: 1.25rem; }
   .social__item:last-child {
     margin-right: 0; }
 
@@ -487,13 +490,13 @@ img {
 
 .delivery__title {
   color: #f9b43b;
-  margin-bottom: 44px; }
+  margin-bottom: 2.75rem; }
 
 .delivery__form {
   color: white;
   display: flex;
   justify-content: space-between;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 300; }
 
 .delivery__data {
@@ -502,17 +505,17 @@ img {
 
 .delivery__input {
   border: none;
-  height: 35px;
-  border-radius: 5px;
+  height: 2.1875rem;
+  border-radius: 0.3125rem;
   border: 1px solid #d1cfcb; }
   .delivery__input--222px {
-    width: 222px; }
+    width: 13.875rem; }
   .delivery__input--460px {
-    width: 460px; }
+    width: 28.75rem; }
   .delivery__input--100px {
-    width: 100px; }
+    width: 6.25rem; }
   .delivery__input:active, .delivery__input:hover {
-    border: 2px solid #f9b43b;
+    border: 0.125rem solid #f9b43b;
     transition: 0.4s; }
 
 .delivery__data_label {
@@ -522,20 +525,20 @@ img {
 .delivery__data_container {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px; }
+  margin-bottom: 1.25rem; }
   .delivery__data_container:last-child {
     margin-bottom: 0; }
 
 .delivery__text {
-  width: 460px;
-  height: 110px;
-  border: 1px solid #d1cfcb;
-  border-radius: 5px; }
+  width: 28.75rem;
+  height: 6.875rem;
+  border: 0.0625rem solid #d1cfcb;
+  border-radius: 0.3125rem; }
 
 .delivery__data_elem {
-  margin-bottom: 29px; }
+  margin-bottom: 1.8125rem; }
   .delivery__data_elem label {
-    padding-left: 25px; }
+    padding-left: 1.5625rem; }
 
 .delivery__data_button {
   display: flex;
@@ -550,24 +553,24 @@ img {
   text-transform: capitalize; }
 
 .delivery__text {
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   resize: none; }
 
 .delivery__field {
-  margin-bottom: 9px; }
+  margin-bottom: 0.5625rem; }
 
 .delivery__visually-hidden {
   display: none; }
 
 .delivery__change {
-  margin-right: 20px; }
+  margin-right: 1.25rem; }
 
 .delivery__radio-label {
   position: relative; }
   .delivery__radio-label:before {
     content: '';
-    width: 15px;
-    height: 15px;
+    width: 0.9375rem;
+    height: 0.9375rem;
     border-radius: 50%;
     background: white;
     position: absolute;
@@ -575,8 +578,8 @@ img {
 
 .delivery__radio:checked + .delivery__radio-label:after {
   content: '';
-  width: 7px;
-  height: 7px;
+  width: 0.4375rem;
+  height: 0.4375rem;
   border-radius: 50%;
   background-color: #e35028;
   position: absolute;
@@ -587,19 +590,66 @@ img {
   position: relative; }
   .delivery__checkbox-label:before {
     content: '';
-    width: 15px;
-    height: 15px;
+    width: 0.9375rem;
+    height: 0.9375rem;
     background: white;
     position: absolute;
     left: 0%; }
 
 .delivery__checkbox:checked + .delivery__checkbox-label:after {
   content: '';
-  width: 12px;
-  height: 10px;
+  width: 0.75rem;
+  height: 0.625rem;
   background: url("../icons/checked.png") no-repeat;
   position: absolute;
   top: 20%;
   left: 1%; }
+
+.phone-icon {
+  width: 0.6875rem;
+  height: 0.6875rem;
+  fill: #e45028; }
+
+.scroll-down {
+  width: 1.875rem;
+  height: 1.875rem;
+  fill: white; }
+
+.logo {
+  width: 6.125rem;
+  height: 4.625rem; }
+
+.sprite {
+  display: block; }
+
+.meat {
+  width: 6.0625rem;
+  height: 5.625rem;
+  fill: #E35028; }
+
+.hand {
+  width: 6.0625rem;
+  height: 5.625rem;
+  fill: #F9B43B; }
+
+.natural {
+  width: 6.0625rem;
+  height: 5.625rem;
+  fill: #8BC03F; }
+
+.social_icon {
+  width: 1.25rem;
+  height: 1.25rem;
+  fill: #585858;
+  transition: 1s; }
+  .social_icon:hover {
+    fill: white;
+    transition: 1s; }
+
+.drops {
+  width: 26.875rem;
+  height: 25rem;
+  position: absolute;
+  top: 0; }
 
 /*# sourceMappingURL=style.css.map */
