--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,6 +14,7 @@
 @import "../scss/map.scss";
 @import "../scss/footer.scss";
 @import "../scss/delivery.scss";
+@import "../scss/sprite.scss";
 
 
 
